crates/apollo-compiler/test_data/diagnostics/0013_schema_definition_with_duplicate_root_type_operations.txt
Error: the root operation type definition `customPetQuery` is defined multiple times in the document
   ╭─[0013_schema_definition_with_duplicate_root_type_operations.graphql:3:3]
   │
 2 │   query: customPetQuery,
   │   ──────────┬──────────  
   │             ╰──────────── previous definition of `customPetQuery` here
 3 │   subscription: customPetQuery
   │   ──────────────┬─────────────  
   │                 ╰─────────────── `customPetQuery` redefined here
   │ 
   │ Help: `customPetQuery` must only be defined once in this document.
───╯

